[package]
name = "cabin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
convert_case = "0.6.0"
enum_dispatch = "0.3.13"
phf = { version = "0.11.2", features = ["macros"] }
regex-macro = "0.2.0"
strum = "0.26.3"
strum_macros = "0.26.4"
toml_edit = "0.22.22"
try_as = "0.1.0"
unindent = "0.2.3"

[package.metadata.commands]
run = "cargo run -q -- run"

[lints.clippy]
assigning_clones = "allow"
tabs_in_doc_comments = "allow"
