[package]
name = "cabin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
convert_case = "0.6.0"
enum_dispatch = "0.3.13"
expression-formatter = "0.1.0"
paste = "1.0.15"
pathdiff = "0.2.2"
phf = { version = "0.11.2", features = ["macros"] }
regex-macro = "0.2.0"
semver = "1.0.23"
smart-default = "0.7.1"
strum = "0.26.3"
strum_macros = "0.26.4"
toml_edit = "0.22.22"
try_as = "0.1.0"
unindent = "0.2.3"

[package.metadata.commands]
run = "cargo run -q -- run"
run-prelude = "cargo run -q -- run std/prelude.cabin"

[lints.clippy]
assigning_clones = "allow"
tabs_in_doc_comments = "allow"
blocks_in_conditions = "allow"
